--- a/main/users/templates/otp.html
+++ b/main/users/templates/otp.html
@@ -48,7 +48,7 @@
                             
                             <div class="mb-4">
                                 <label class="form-label mb-3">کد ۵ رقمی را وارد کنید</label>
-                                <div class="d-flex justify-content-center mb-3">
+                                <div class="d-flex justify-content-center flex-row-reverse mb-3">
                                     <input type="text" class="otp-input" maxlength="1" pattern="[0-9]" inputmode="numeric" required name="otp5" autofocus>
                                     <input type="text" class="otp-input" maxlength="1" pattern="[0-9]" inputmode="numeric" required name="otp4">
                                     <input type="text" class="otp-input" maxlength="1" pattern="[0-9]" inputmode="numeric" required name="otp3">
