--- a/main/assets/pages/css/otp.css
+++ b/main/assets/pages/css/otp.css
@@ -8,6 +8,7 @@ body {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 }
+
 .otp-input {
     width: 50px;
     height: 60px;
@@ -18,8 +19,9 @@ body {
     border: 2px solid #dee2e6;
     border-radius: 10px;
     transition: all 0.3s;
-    direction: ltr; /* نمایش اعداد از راست به چپ */
+    direction: ltr;
 }
+
 .otp-input:focus {
     border-color: #0d6efd;
     box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
